# fikabot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yaml
.github/: dependabot.yaml  release-drafter.yml
.github/workflows/: branches.yaml  ci.yaml  drafter.yaml  main.yaml  publish.yaml
entity/: Cargo.toml
entity/src/: channel.rs  lib.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: algos.rs  cron.rs  db.rs  http.rs  main.rs  slack.rs
src/algos/: fika.rs  song.rs
src/cron/: fika.rs  song.rs
src/db/: channel.rs  user.rs
