[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
edition = "2021"
name = "fikabot"
version = "0.2.0"


[dependencies]
entity = { path = "entity" }

anyhow = "1.0.80"
axum = "0.7.4"
envy = "0.4.2"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.0"
hyper = "1.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
sea-orm = { version = "0.12.14", features = [
    "macros",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "json"] }
